fixing surefire plugin issues
Signed-off-by: Ramy Abdalla <ramy.abdalla@broadcom.com>