@@ -160,10 +160,12 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
                 <configuration>
-                    <argLine>${surefireArgLine}</argLine>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx8192m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
         </plugins>
